macOS: Fix menu-bar highlighting during keyEquivalents.

-[NSMenu performKeyEquivalent:] uses private APIs to highlight the menu for
100ms when the keyEquivalent: is activated. Rather than attempting to use the
private APIs, we simply let the NSMainMenu handle the event by returning NO from
-[NSWindow performKeyEquivalent:].

Bug: 851317
Change-Id: I7f71023a4e37e0f89cb4f5e2f34fb1d95149629f
Reviewed-on: https://chromium-review.googlesource.com/1105067
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568929}
Former-commit-id: 41281cd0bc3d09a8ce2b9c285c76870e4838f181