chrome/browser/ui/cocoa/browser_window_cocoa.mm
@@ -583,7 +583,7 @@ BrowserWindowCocoa::PreHandleKeyboardEvent(
   if (![BrowserWindowUtils shouldHandleKeyboardEvent:event])
     return Result::NOT_HANDLED;
 
-  int command = CommandForKeyEvent(event.os_event);
+  int command = CommandForKeyEvent(event.os_event).chrome_command;
   if (command == -1)
     command = DelayedWebContentsCommandForKeyEvent(event.os_event);
   return command == -1 ? Result::NOT_HANDLED : Result::NOT_HANDLED_IS_SHORTCUT;
